# tree-sitter-ridl

./: .tool-versions  Cargo.toml  LICENSE  README.md  binding.gyp  biome.json  grammar.js  package.json  pnpm-lock.yaml  tree-sitter.json
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: error_optional_http.txt  meta_value.txt  service_edge.txt  smoke.txt  types.txt  webrpc_parity.txt
test/fixtures/: e1.ridl
