[package]
name = "tree-sitter-ridl"
description = "RIDL grammar for tree-sitter"
version = "0.1.0"
authors = ["Jacob Wolf <jacob@jacobwolf.dev>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ridl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jacobnwolf/tree-sitter-ridl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
